--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.12.3",
     "multer": "^0.1.8",
     "redis": "^0.12.1",
-    "http-proxy": "^1.15.2"
+    "http-proxy": "^1.15.2",
+    "hashmap": "^2.0.5"
   }
 }
